// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateOne FieldMetadataService Enum Default Value Validation should delete related view filter if all select field options got deleted 1`] = `
[
  {
    "extensions": {
      "code": "NOT_FOUND",
    },
    "message": "Record not found",
  },
]
`;

exports[`updateOne FieldMetadataService Enum Default Value Validation should handle adding new options while maintaining existing view filter 1`] = `
{
  "displayValue": "2 options",
  "id": Any<String>,
  "value": "["OPTION_0","OPTION_1"]",
}
`;

exports[`updateOne FieldMetadataService Enum Default Value Validation should handle no changes update of options while maintaining existing view filter values 1`] = `
{
  "displayValue": "10 options",
  "id": Any<String>,
  "value": "["OPTION_0","OPTION_1","OPTION_2","OPTION_3","OPTION_4","OPTION_5","OPTION_6","OPTION_7","OPTION_8","OPTION_9"]",
}
`;

exports[`updateOne FieldMetadataService Enum Default Value Validation should handle partial deletion of selected options in view filter 1`] = `
{
  "displayValue": "6 options",
  "id": Any<String>,
  "value": "["OPTION_4","OPTION_5","OPTION_6","OPTION_7","OPTION_8","OPTION_9"]",
}
`;

exports[`updateOne FieldMetadataService Enum Default Value Validation should handle reordering of options while maintaining view filter values 1`] = `
{
  "displayValue": "2 options",
  "id": Any<String>,
  "value": "["OPTION_0","OPTION_1"]",
}
`;

exports[`updateOne FieldMetadataService Enum Default Value Validation should update related multi selected options view filter 1`] = `
{
  "displayValue": "10 options",
  "id": Any<String>,
  "value": "["OPTION_0_UPDATED","OPTION_1","OPTION_2_UPDATED","OPTION_3","OPTION_4_UPDATED","OPTION_5","OPTION_6_UPDATED","OPTION_7","OPTION_8_UPDATED","OPTION_9"]",
}
`;

exports[`updateOne FieldMetadataService Enum Default Value Validation should update related solo selected option view filter 1`] = `
{
  "displayValue": "Option 5 updated",
  "id": Any<String>,
  "value": "["OPTION_5_UPDATED"]",
}
`;
